--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 
 <body>
-    <h1>Armand Adroher Salvia</h1>
+    <div id="app">
+        <p>
+            Content goes here.
+        </p>
+    </div>
     <script src="/app.js"></script>
-    <div id="app"></div>
 </body>
 
 </html>
