--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-
-<body>
+  <body>
     <h1>Armand Adroher Salvia</h1>
-    <script src="/app.js"></script>
     <div id="app"></div>
-</body>
-
+    <script src="/app.js"></script>
+  </body>
 </html>
