--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,17 @@
     <title>React App</title>
   </head>
   <body>
+    <style type="text/css">
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100%
+    }
+    #root {
+      width: 100%;
+      margin: 0;
+    }
+    </style>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
